@@ -1,4 +1,4 @@
-/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_compress.c,v 1.3 1999-12-20 23:46:11 mwelles Exp $ */
+/* $Header: /cvs/maptools/cvsroot/libtiff/libtiff/tif_compress.c,v 1.4 1999-12-21 17:03:03 mwelles Exp $ */
 
 /*
  * Copyright (c) 1988-1997 Sam Leffler
@@ -39,7 +39,7 @@ TIFFNoEncode(TIFF* tif, char* method)
 	if (c) { 
 	  if (! strncmp(c->name, "LZW", 3) ){ 
 	    TIFFError(tif->tif_name, 
-		      "%s %s encoding is no longer implemented due to Unisys patent enforcement.", 
+		      "%s %s encoding is no longer implemented due to Unisys patent enforcement", 
 		      c->name, method); 
 	  } else { 
 	    TIFFError(tif->tif_name, "%s %s encoding is not implemented",
