@@ -1,4 +1,4 @@
-/* $Header: /cvs/maptools/cvsroot/libtiff/tools/tiffmedian.c,v 1.1 1999-07-27 21:50:28 mike Exp $ */
+/* $Header: /cvs/maptools/cvsroot/libtiff/tools/tiffmedian.c,v 1.2 1999-12-21 17:03:03 mwelles Exp $ */
 
 /*
  * Apply median cut on an image.
@@ -6,7 +6,8 @@
  * tiffmedian [-c n] [-f] input output
  *     -C n		- set colortable size.  Default is 256.
  *     -f		- use Floyd-Steinberg dithering.
- *     -c lzw		- compress output with LZW
+ *     -c lzw		- compress output with LZW 
+ *                        (no longer supported due to unisys patent enforcement) 
  *     -c none		- use no compression on output
  *     -c packbits	- use packbits compression on output
  *     -r n		- create output with n rows/strip of data
@@ -313,6 +314,7 @@ char* stuff[] = {
 " -C #		create a colormap with # entries",
 " -f		use Floyd-Steinberg dithering",
 " -c lzw[:opts]	compress output with Lempel-Ziv & Welch encoding",
+"               (no longer supported due to Unisys patent enforcement)", 
 " -c zip[:opts]	compress output with deflate encoding",
 " -c packbits	compress output with packbits encoding",
 " -c none	use no compression algorithm on output",
